Set max-width of .image-display to prevent overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,6 +173,7 @@ span {
     margin: 5px auto;
     border: 2px solid black;
     display: block;
+    max-width: 275px;
 }
 
 @media (min-width: 750px) {
